Bug 89085 - UI Writer Page separator pop up "Edit page break" does not open on the proper tab in dialog
Summary: UI Writer Page separator pop up "Edit page break" does not open on the proper...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.5.0
Keywords: difficultyBeginner, easyHack, skillCpp, topicUI
: 81017 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-02-03 16:07 UTC by Cor Nouws
Modified: 2015-12-16 00:13 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2015-02-03 16:07:54 UTC
Make writer document
Ctrl-Enter
Mouse over page separator (blue striped line)
Click in the pop up on "Edit page break"

 > The dialog opens at 'a random' tab (actually must be the latest one used)
 > Should be tab 'Text flow'

(see similarity with Tools > Language > ... > More .. in Writer also, that opens the dialog Font at the tab Font. )
Comment 1 Cor Nouws 2015-02-03 16:08:42 UTC
this would make a great easy hack.
Comment 2 Rishabh 2015-02-13 22:41:26 UTC
Pushed the changes. Up for the review.
Comment 3 Adolfo Jayme Barrientos 2015-02-17 11:15:32 UTC
http://cgit.freedesktop.org/libreoffice/core/commit/?id=769a37962e9ab3f44cc40b547ebd859f0d1f7e21

tdf#89085 Edit page break does not open proper tab
Comment 4 Gordo 2015-06-07 14:23:56 UTC
*** Bug 81017 has been marked as a duplicate of this bug. ***
Comment 5 Robinson Tryon (qubit) 2015-12-16 00:13:25 UTC
Migrating Whiteboard tags to Keywords: (EasyHack DifficultyBeginner SkillCpp TopicUI )
[NinjaEdit]