tdf#89085 Edit page break does not open proper tab

Current Behavior : opens a random tab
Expected behavior : open Text Flow tab

Change-Id: I4bbd9dcf2bbbb237d5d70ef07b88f40be9681e7a
Reviewed-on: https://gerrit.libreoffice.org/14486
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>